<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/albumFragment"
            android:icon="@drawable/baseline_album_24"
            android:title="@string/title_albums"/>
        <item
            android:id="@+id/musicianFragment"
            android:icon="@drawable/baseline_interpreter_mode_24"
            android:title="@string/title_musicians" />
        <item
            android:id="@+id/collectorFragment"
            android:icon="@drawable/baseline_library_music_24"
            android:title="@string/title_collectors" />
        <item
            android:id="@+id/prizeFragment"
            android:icon="@drawable/baseline_emoji_events_24"
            android:title="@string/title_prizes" />
    </group>
</menu>