...
        tools:layout="@layout/album_add_comment_fragment" >
        <action
            android:id="@+id/action_albumAddCommentFragment_to_albumDetailFragment"
            app:destination="@id/albumDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/musicianFragment"
        android:name="com.example.vinyls_equipo_16.ui.MusicianFragment"
        android:label="@string/artistas_title"
        tools:layout="@layout/musician_fragment" >
        <action
            android:id="@+id/action_musicianFragment_to_musicianDetailFragment"
            app:destination="@id/musicianDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/musicianDetailFragment"
        android:name="com.example.vinyls_equipo_16.ui.MusicianDetailFragment"
        android:label="@string/artistas_title"
        tools:layout="@layout/musician_detail_fragment" >
        <argument
            android:name="musicianId"
            app:argType="integer" />
        <action
            android:id="@+id/action_musicianDetailFragment_to_musicianAddPrizeFragment"
            app:destination="@id/musicianAddPrizeFragment" />
        <action
            android:id="@+id/action_musicianDetailFragment_to_musicianAddAlbumFragment"
            app:destination="@id/musicianAddAlbumFragment" />
    </fragment>
    <fragment
        android:id="@+id/musicianAddPrizeFragment"
        android:name="com.example.vinyls_equipo_16.ui.MusicianAddPrizeFragment"
        android:label="Asociar Premio a Artista"
        tools:layout="@layout/musician_add_prize_fragment" >
...
