...
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/collector_add_price"
            style="@style/labelTextNew" />

        <EditText
            android:id="@+id/premiationDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_background"
            android:focusable="false"
            android:hint="Selecciona una fecha"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnCreate"
        style="@style/ButtonRounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:text="@string/save" />
...
