...

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/musiciansRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/musician_item"/>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</FrameLayout>
