package com.example.vinyls_equipo_16

import android.view.Gravity
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.DrawerActions
import androidx.test.espresso.contrib.DrawerMatchers.isClosed
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.ext.junit.rules.ActivityScenarioRule
import com.example.vinyls_equipo_16.ui.MainActivity
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@RunWith(AndroidJUnit4::class)
class HUMenuTest {

    @get:Rule
    val activityScenarioRule = ActivityScenarioRule(MainActivity::class.java)

    @Test
    fun clickItemsInDrawer() {

        // Open Drawer to click on navigation.
        onView(withId(R.id.drawer_layout))
            .check(matches(isClosed(Gravity.LEFT))) // Left Drawer should be closed.
            .perform(DrawerActions.open()) // Open Drawer

        // Check the presence of the first item
        onView(withId(R.id.albumFragment))
            .check(matches(isDisplayed()))

        // Check the presence of the second item
        onView(withId(R.id.musicianFragment))
            .check(matches(isDisplayed()))

        // Check the presence of the third item
        onView(withId(R.id.collectorFragment))
            .check(matches(isDisplayed()))

        // Check the presence of the third item
        onView(withId(R.id.prizeFragment))
            .check(matches(isDisplayed()))

        // Click on the first menu item
        onView(withId(R.id.musicianFragment)).perform(click())

        // Open Drawer to click on navigation.
        onView(withId(R.id.drawer_layout))
            .check(matches(isClosed(Gravity.LEFT))) // Left Drawer should be closed.
            .perform(DrawerActions.open()) // Open Drawer

        // Click on the second menu item
        onView(withId(R.id.musicianFragment)).perform(click())

        // Open Drawer to click on navigation.
        onView(withId(R.id.drawer_layout))
            .check(matches(isClosed(Gravity.LEFT))) // Left Drawer should be closed.
            .perform(DrawerActions.open()) // Open Drawer

        // Click on the second menu item
        onView(withId(R.id.collectorFragment)).perform(click())

        // Open Drawer to click on navigation.
        onView(withId(R.id.drawer_layout))
            .check(matches(isClosed(Gravity.LEFT))) // Left Drawer should be closed.
            .perform(DrawerActions.open()) // Open Drawer

        // Click on the second menu item
        onView(withId(R.id.prizeFragment)).perform(click())

        // Open Drawer to click on navigation.
        onView(withId(R.id.drawer_layout))
            .check(matches(isClosed(Gravity.LEFT))) // Left Drawer should be closed.
            .perform(DrawerActions.open()) // Open Drawer

        // Click on the second menu item
        onView(withId(R.id.albumFragment)).perform(click())
    }
}
